# basil

./: .gitignore  Cargo.toml  README.md
basil-ast/: Cargo.toml
basil-ast/src/: lib.rs  node.rs  operators.rs
basil-core/: Cargo.toml
basil-core/src/: base.rs  class.rs  code_block.rs  common_types.rs  context.rs  dictionary.rs  exception.rs  expression.rs  function.rs  lib.rs  object.rs  primitive.rs  ptr.rs  span.rs  statements.rs  type_id.rs  variable.rs
basil-core/src/apis/: mod.rs
basil-core/src/external_structures/: application.rs  group.rs  mod.rs  window.rs
basil-core/src/internal_structures/: mod.rs
basil-core/src/internal_structures/shapes/: mod.rs
basil-core/src/rendering/: colors.rs  mod.rs  stroke.rs  two_dimensional.rs
basil-core/src/sys/: mod.rs
basil-derive/: Cargo.toml
basil-derive/src/: lib.rs
basil-frontend/: Cargo.toml
basil-frontend/src/: span.rs
basil-interpreter/: Cargo.toml
basil-interpreter/src/: context.rs  frame.rs  interpreter.rs  lib.rs  reference_chain.rs
