[package]
name = "basil-ast"
version = "0.1.0"
authors = ["Joshua Radin <54867459+JoshuaRadin37@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basil-frontend = { path = "../basil-frontend"}