[package]
name = "basil-core"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"

[target.'cfg(windows)'.dependencies]
direct2d = "0.2.0"
