[package]
name = "basil-core"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3.1"
num-rational = "0.3.2"
num-traits = "0.2.14"
basil-frontend = { path = "../basil-frontend" }
