[package]
name = "basil-derive"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
basil-core = { path = "../basil-core" }
syn = { version="1.0", features=["default", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"]}
quote = "1.0"