[package]
name = "basil-interpreter"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5"
basil-core = { path="../basil-core" }
basil-frontend = {path="../basil-frontend" }
basil-derive = { path = "../basil-derive" }